<resources>
	<string name="app_name">ImageViewer</string>
	<string name="title_heading">Title: </string>
	<string name="name_heading">Name: </string>
	<string name="id_heading">ID: </string>
	<string name="loading">Loading...</string>
	<string name="error_loading">Error loading data from server?</string>
	<string name="password_hint">Password</string>
	<string name="email_hint">Email</string>
	<string name="login_txt">Login</string>
	<string name="login_failed">Login failed. please try again!</string>
	<string name="invalid_email_error">please use valid email</string>
	<string name="selection_title">Selection</string>
</resources>
