<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="24dp"
	tools:context=".ui.view.login.LoginActivity">


	<ImageView
		android:id="@+id/icon"
		android:layout_width="90dp"
		android:layout_height="90dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/fc2_logo2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />


	<android.support.design.widget.TextInputLayout
		android:id="@+id/emailInputLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:theme="@style/MyTextInputLayoutTheme"
		app:errorEnabled="true"
		app:errorTextAppearance="@style/ErrorTextInputFontStyle"
		app:hintEnabled="false"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/icon">

		<EditText
			android:id="@+id/emailTxt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:hint="@string/email_hint"
			android:inputType="text"
			android:maxLines="1"
			android:theme="@style/EditTextStyle" />

	</android.support.design.widget.TextInputLayout>

	<EditText
		android:id="@+id/passwordTxt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:hint="@string/password_hint"
		android:inputType="textPassword"
		android:maxLines="1"
		android:theme="@style/EditTextStyle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

	<FrameLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/passwordTxt">

		<imageviewer.eoinahern.ie.imageviewer.tools.views.LoadingView
			android:id="@+id/loading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible" />


	</FrameLayout>


	<Button
		android:id="@+id/nextBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="14dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/button_background_blue"
		android:fontFamily="@font/abel"
		android:text="@string/login_txt"
		android:textColor="@color/colorAccent"
		android:textSize="18dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>